--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "jwz",
   "version": "1.0.4",
   "description": "Utils",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JetsadaWijit/jwz.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
