--- a/github/api.properties
+++ b/github/api.properties
@@ -1,4 +1,4 @@
 # get repo url
-RepoUrl=https://api.github.com/organizations/${organization}/repos
+repourl=https://api.github.com/organizations/${organization}/repos
 # get repo collaborator
-RepoUrlCollaborator=https://api.github.com/repos/${organization}/${repository}/collaborators/${collaborator}
+repourlcollaborator=https://api.github.com/repos/${organization}/${repository}/collaborators/${collaborator}
