--- a/github/api.properties
+++ b/github/api.properties
@@ -1,4 +1,6 @@
 # get repo url
 repourl=https://api.github.com/organizations/${organization}/repos
+# get repo specific
+repospecificurl=https://api.github.com/repos/${organization}/${repository}
 # get repo collaborator
 repourlcollaborator=https://api.github.com/repos/${organization}/${repository}/collaborators/${collaborator}
