--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "url": "https://github.com/JetsadaWijit/jwz.git"
   },
   "main": "index.js",
+  "files": [
+    "github/repository/*.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
