--- a/github/properties/api.properties
+++ b/github/properties/api.properties
@@ -4,3 +4,5 @@ repourl=https://api.github.com/organizations/${organization}/repos
 repospecificurl=https://api.github.com/repos/${organization}/${repository}
 # get repo collaborator
 repourlcollaborator=https://api.github.com/repos/${organization}/${repository}/collaborators/${collaborator}
+# get repo release
+reporeleaseurl=https://api.github.com/repos/{org}/{repo}/releases
