--- a/github/properties/api.properties
+++ b/github/properties/api.properties
@@ -5,4 +5,4 @@ repospecificurl=https://api.github.com/repos/${organization}/${repository}
 # get repo collaborator
 repocollaboratorurl=https://api.github.com/repos/${organization}/${repository}/collaborators/${collaborator}
 # get repo release
-reporeleaseurl=https://api.github.com/repos/{org}/{repo}/releases
+reporeleaseurl=https://api.github.com/repos/${organization}/${repository}/releases
