Change website url

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jwz",
   "version": "1.8.0",
   "description": "Utils",
-  "homepage": "https://jetsadawijit.github.io/website-npmjs",
+  "homepage": "https://jetsadawijit.github.io/npmjs-website",
   "repository": {
     "type": "git",
     "url": "https://github.com/JetsadaWijit/npmjs.git"
