Fix repourl url

--- a/gitlab/properties/api.properties
+++ b/gitlab/properties/api.properties
@@ -1,5 +1,5 @@
 # Get group projects
-repourl=https://gitlab.com/api/v4/groups/${group_id}/projects
+repourl=https://gitlab.com/api/v4/projects
 # Get project-specific details
 repospecificurl=https://gitlab.com/api/v4/projects/${project_id}
 # Get project members
