--- a/gitlab/properties/api.properties
+++ b/gitlab/properties/api.properties
@@ -1,8 +1,8 @@
-# Get group projects
+# Get projects
 repourl=https://gitlab.com/api/v4/projects
 # Get project-specific details
 repospecificurl=https://gitlab.com/api/v4/projects/${project_id}
-# Get project members
-repocollaboratorurl=https://gitlab.com/api/v4/projects/${project_id}/members/${user_id}
+# Url for invite to repository
+repocollaboratorurl=https://gitlab.com/api/v4/projects/${project_id}/members
 # Get project releases
 reporeleaseurl=https://gitlab.com/api/v4/projects/${project_id}/releases
