Fix invalid url, Improve code

--- a/gitlab/properties/api.properties
+++ b/gitlab/properties/api.properties
@@ -4,5 +4,7 @@ repourl=https://gitlab.com/api/v4/projects
 repospecificurl=https://gitlab.com/api/v4/projects/${project_id}
 # Url for invite to repository
 repocollaboratorurl=https://gitlab.com/api/v4/projects/${project_id}/members
+# Url for remove user from repository
+repocollaboratorurlmember=https://gitlab.com/api/v4/projects/${project_id}/members/${user_id}
 # Get project releases
 reporeleaseurl=https://gitlab.com/api/v4/projects/${project_id}/releases
