fix: Change image

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Container",
-    "image": "mcr.microsoft.com/devcontainers/javascript-node:18-bullseye",
+    "image": "mcr.microsoft.com/devcontainers/javascript-node:18",
     "features": {
       "ghcr.io/devcontainers-contrib/features/jshint:2": {}
     },
