fix: correct API endpoints, auth logic, and module imports for GitHub and GitLab
- GitHub: Update organization API endpoint and add auth headers to release fetch
- GitLab: Add namespace_id to buildRepos for correct group creation and fix release auth
- General: Fix relative import paths, export destructuring, and normalize whitespace

--- a/github/properties/api.properties
+++ b/github/properties/api.properties
@@ -1,5 +1,5 @@
 # get repo url
-repourl=https://api.github.com/organizations/${organization}/repos
+repourl=https://api.github.com/orgs/${organization}/repos
 # get repo specific
 repospecificurl=https://api.github.com/repos/${organization}/${repository}
 # get repo collaborator
